commit 28e134e2c0bb8f4707bf299c18fe7d5b5de55795
Date:   Fri May 8 19:10:13 2015 +0300

    Minor refactoring.

commit 5241bee54c9bfe7ec626aa2d383f3667377e8d2c
Date:   Fri May 8 16:46:51 2015 +0300

    Refactored the Chart code from OTMql4Zmq and OTMql4AMQP into Mq4Chart.py.

commit d80d90d6a98a398c542287f94f880e53172d0b0f
Date:   Thu May 7 01:05:44 2015 +0300

    Broke out functions from MQL4/Include/OTMql4/OTPy27.mqh
    into a proper library file:
    MQL4/Libraries/OTMql4/OTLibPy27.mq4
    Include this in your work, and leave the other one for internal use.

commit 2bd2e2c23546b33a57aa7213a2424242ee69a243
Date:   Thu May 7 01:03:33 2015 +0300

    Broke out some of the functionity of
    MQL4/Python/OTMql427/__init__.py
    into
    MQL4/Python/OTMql427/Mt4SafeEval.py
    MQL4/Python/OTMql427/Mt4Tkinter.py

commit f5e046f003ba2f4ef63ab7297933d341278e47b9
Date:   Fri May 1 17:50:16 2015 +0300

    Moved MQL4/Experts/OTMql4/OTPyTestZmqEA.mq4 to OTMql4Zmq

commit 43b2f2289e28836bd82b3918a4ce106ec548a799
Date:   Tue Apr 28 16:36:06 2015 +0300

    Moved share/doc/05PyZmq.txt to
    https://github.com/OpenTrading/OTMql4Zmq

commit 4f673ad5d60d3e2c7caaa85c797cfca45aa328cd
Date:   Tue Apr 28 12:38:42 2015 +0300

    Moved MQL4/Python/OTMql427/ZmqChart.py to
    https://github.com/OpenTrading/OTMql4Zmq/
    so now OTMql4Zmq will be both the C-coded and Python Zmq.

commit 059e5a33bc7e7386fef2aba07453941361c89c34
Date:   Sun Apr 26 22:38:43 2015 +0300

    Cleaned things up for pylint. The rcfile that we use
    is checked in at etc/pylint.rc.

commit 15053ebb820a9b7953acbb0a1aee8649d4e85b20
Date:   Fri Apr 24 18:13:13 2015 +0300

    Introduced the Python lgging functions - still need testing.
    
    Wrote up some documentation on bi-directional architecture for
    Python and Mt4.

commit 26337dfe123a7adb7fb60104cd3d560c45c3b808
Date:   Wed Apr 22 14:44:21 2015 +0300

    Implemented the return REQ/REP channel for testing the sending